refactor: organize scripts into scripts/ folder and add service unit tests
- Move all shell scripts to scripts/ folder
- Move JS test scripts to scripts/js/ folder
- Remove temporary files (1, EOF) and log files
- Update .gitignore to exclude runtime files (*.log, *.pid, backend/logs/, frontend/*.log)
- Add comprehensive unit tests for ChatRoomService, MentionService, and FileStorageService